rust-examples/tests/compile-fail/Rule_10_5.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let x: bool = 3 as bool;
    println!("{}", x);
}
